Wed Feb 26 00:38:50 2002 UTC  Don Hinton <dhinton@ieee.org>

	* ace/Select_Reactor_Base.h:
	* ace/Select_Reactor.cpp:
	* ace/Select_Reactor_T.cpp:

	  Removed ACE_SELECT_REACTOR_HAS_DEADLOCK_DETECTION since
	  it isn't used.

Tue Feb 26 22:54:50 2002 UTC  Don Hinton <dhinton@ieee.org>
	
	* ace/Synch.i (ACE_Noop_Token::queueing_strategy):

	  Removed ACE_UNUSED_ARG and commented out the parameter 
	  instead.  Thanks to Ossama and Craig for pointing this out.

Tue Feb 26 16:17:45 2002  Nanbor Wang  <nanbor@cs.wustl.edu>

	* ace/Thread_Manager.h (ACE_Thread_Manager): Fixed a typo in
	  doxygen document tag.  Thanks to Brad Hoskins
	  <BHoskins@slo.newport.com> for reporting this.

Tue Feb 26 10:22:39 2002  Steve Huston  <shuston@riverace.com>

        * include/makeinclude/platform_sunos5_sunc++.GNU: Added the ability
          to enable RTTI in the compat=4 case. Removed the explicit
          inclusion of an installation-specific path to -L for compat=4.
          Installation-specific adidtions/changes should go in the
          installation's platform_macros.GNU file.

Tue Feb 26 09:48:24 2002  Craig Rodrigues  <crodrigu@bbn.com>

	* apps/drwho/Protocol_Manager.cpp: Replace #include "new.h"
	  with #include "ace/config.h" to eliminate gcc 3.1 warning
	  about deprecated header.

Tue Feb 25 10:16:12 2002  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Token_Strategy_Test.cpp:
          Fixed unicode compile error

Mon Feb 25 19:30:54 2002  Steve Huston  <shuston@riverace.com>

        * tests/Collection_Test.cpp: Moved the declaration of UglyThing
          to a new file, Collection_Test.h.  Visual Age C++ needs it in
          a separate file to do auto template instantiation.
        * tests/Collection_Test.h: New file.

Mon Feb 25 19:27:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/Log_Msg.cpp (log): In handling for %t, fixed the feature
          test that changes behavior for AIX 4.2 and earlier. This